VOTE-261 Fix footer text wrapping issue for Korean translation

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -454,7 +454,8 @@ $logo-width: 130px;
 }
 
 .footer-logos {
-  padding-top: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .footer-column {
@@ -462,7 +463,7 @@ $logo-width: 130px;
   width: 100%;
 
     @include at-media('tablet') {
-      width: auto;        
+      width: auto;
     }
 }
 
